fix wrapping

--- a/day1/html/index.css
+++ b/day1/html/index.css
@@ -2,10 +2,10 @@
     text-align: center;
     background-color: white;
     padding: 20px 30px;
-    margin: 30px;
     border-radius: 5px;
     box-shadow: 0px 0px 10px 1px;
-    width: 100%;
+    margin: 20px auto;
+    width: 150px;
     color: #333333;
     cursor: pointer;
     transition: transform 0.3s ease;
@@ -20,4 +20,5 @@
     display: flex;
     justify-content: space-between;
     flex-grow: 1;
+    flex-wrap: wrap;
 }
